Add `dev` mode for testing